# lis2mdl-rs

./: Cargo.toml  README.md
src/: bits.rs  data.rs  error.rs  lib.rs  register.rs
src/config/: mod.rs  output_data_rate.rs
